--- a/server/tests/drivers/ec2/fixtures/test_0008_must_allow_to_reboot_instance_in_running_state-8.yml
+++ b/server/tests/drivers/ec2/fixtures/test_0008_must_allow_to_reboot_instance_in_running_state-8.yml
@@ -1,37 +1,38 @@
 --- 
+recorded_with: VCR 2.2.4
 http_interactions: 
 - request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeInstances&InstanceId.1=i-7177920a&Signature=DHxm7p2CMHn5fzkybhIzC977iJ/i59rnLEIXVWdrTVE=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJHMN5TTUKVLK5WCQ&Action=DescribeInstances&InstanceId.1=i-768c640c&Signature=FWu1FLJ8Rx57569ZJEcQrj+wbU8mQ/NBiE7fYTWr290=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-08-28T23:25:01.000Z&Version=2010-08-31
     body: 
       string: ""
     headers: 
-      User-Agent: 
-      - ""
       Accept: 
       - "*/*"
+      User-Agent: 
+      - ""
   response: 
     status: 
       code: 200
       message: OK
     headers: 
+      Date: 
+      - Tue, 28 Aug 2012 23:25:01 GMT
+      Transfer-Encoding: 
+      - chunked
       Content-Type: 
       - text/xml;charset=UTF-8
       Server: 
       - AmazonEC2
-      Transfer-Encoding: 
-      - chunked
-      Date: 
-      - Mon, 30 Jul 2012 11:07:55 GMT
     body: 
       string: |-
         <?xml version="1.0" encoding="UTF-8"?>
         <DescribeInstancesResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
-            <requestId>88fa32f8-44ac-4fc7-b796-6d962c59a72e</requestId>
+            <requestId>e1f6400b-c8ca-40a2-bb45-fe13b42dd0ce</requestId>
             <reservationSet>
                 <item>
-                    <reservationId>r-362c9d52</reservationId>
-                    <ownerId>293787749884</ownerId>
+                    <reservationId>r-1ff40478</reservationId>
+                    <ownerId>122214243412</ownerId>
                     <groupSet>
                         <item>
                             <groupId>default</groupId>
@@ -39,19 +40,19 @@ http_interactions:
                     </groupSet>
                     <instancesSet>
                         <item>
-                            <instanceId>i-7177920a</instanceId>
+                            <instanceId>i-768c640c</instanceId>
                             <imageId>ami-aecd60c7</imageId>
                             <instanceState>
-                                <code>32</code>
-                                <name>shutting-down</name>
+                                <code>16</code>
+                                <name>running</name>
                             </instanceState>
-                            <privateDnsName>domU-12-31-39-02-75-62.compute-1.internal</privateDnsName>
-                            <dnsName>ec2-23-20-114-135.compute-1.amazonaws.com</dnsName>
-                            <reason>User initiated (2012-07-30 11:07:54 GMT)</reason>
+                            <privateDnsName>domU-12-31-39-03-CA-6E.compute-1.internal</privateDnsName>
+                            <dnsName>ec2-23-22-221-103.compute-1.amazonaws.com</dnsName>
+                            <reason/>
                             <amiLaunchIndex>0</amiLaunchIndex>
                             <productCodes/>
                             <instanceType>t1.micro</instanceType>
-                            <launchTime>2012-07-30T11:07:18.000Z</launchTime>
+                            <launchTime>2012-08-28T23:24:39.000Z</launchTime>
                             <placement>
                                 <availabilityZone>us-east-1a</availabilityZone>
                                 <groupName/>
@@ -60,12 +61,8 @@ http_interactions:
                             <monitoring>
                                 <state>disabled</state>
                             </monitoring>
-                            <privateIpAddress>10.248.122.144</privateIpAddress>
-                            <ipAddress>23.20.114.135</ipAddress>
-                            <stateReason>
-                                <code>Client.UserInitiatedShutdown</code>
-                                <message>Client.UserInitiatedShutdown: User initiated shutdown</message>
-                            </stateReason>
+                            <privateIpAddress>10.249.201.152</privateIpAddress>
+                            <ipAddress>23.22.221.103</ipAddress>
                             <architecture>x86_64</architecture>
                             <rootDeviceType>ebs</rootDeviceType>
                             <rootDeviceName>/dev/sda1</rootDeviceName>
@@ -73,9 +70,9 @@ http_interactions:
                                 <item>
                                     <deviceName>/dev/sda1</deviceName>
                                     <ebs>
-                                        <volumeId>vol-ba6f60db</volumeId>
+                                        <volumeId>vol-75aa0f0e</volumeId>
                                         <status>attached</status>
-                                        <attachTime>2012-07-30T11:07:42.000Z</attachTime>
+                                        <attachTime>2012-08-28T23:25:01.000Z</attachTime>
                                         <deleteOnTermination>true</deleteOnTermination>
                                     </ebs>
                                 </item>
@@ -88,5 +85,4 @@ http_interactions:
             </reservationSet>
         </DescribeInstancesResponse>
     http_version: 
-  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
-recorded_with: VCR 2.2.4
+  recorded_at: Tue, 28 Aug 2012 23:25:02 GMT
