GoGrid: Added initial MiniTest tests
* Note: The 'create_instance' test is missing, because creating an
  instance in GoGrid took a **lot** of time.

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -116,7 +116,7 @@ task :routes do
   end
 end
 
-DRIVERS = [:mock, :ec2, :rhevm, :google]
+DRIVERS = [:mock, :ec2, :rhevm, :google, :gogrid]
 
 desc 'Run all tests'
 task :test do
